// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Common: Publication: Summary table renders correctly 1`] = `
<div>
  <table
    className="table"
  >
    <colgroup
      span="3"
    />
    <colgroup
      span="2"
    />
    <colgroup
      span="2"
    />
    <colgroup
      span="2"
    />
    <colgroup
      span="2"
    />
    <colgroup
      span="1"
    />
    <thead>
      <tr>
        <th
          className=""
          colSpan="3"
          scope="colgroup"
        >
          Tests
        </th>
        <th
          className=""
          colSpan="2"
          scope="colgroup"
        >
          Hospitalized
        </th>
        <th
          className=""
          colSpan="2"
          scope="colgroup"
        >
          In ICU
        </th>
        <th
          className=""
          colSpan="2"
          scope="colgroup"
        >
          On Ventilator
        </th>
        <th
          className=""
          colSpan="2"
          scope="colgroup"
        >
          Outcomes
        </th>
        <th
          className=""
          scope="colgroup"
        >
          Total Test Results
        </th>
      </tr>
      <tr>
        <th
          className="alignLeft"
          scope="col"
        >
          Positive
        </th>
        <th
          className=""
          scope="col"
        >
          Negative
        </th>
        <th
          className=""
          scope="col"
        >
          Pending
        </th>
        <th
          className="alignLeft"
          scope="col"
        >
          Currently
        </th>
        <th
          className=""
          scope="col"
        >
          Cumulative
        </th>
        <th
          className="alignLeft"
          scope="col"
        >
          Currently
        </th>
        <th
          className=""
          scope="col"
        >
          Cumulative
        </th>
        <th
          className="alignLeft"
          scope="col"
        >
          Currently
        </th>
        <th
          className=""
          scope="col"
        >
          Cumulative
        </th>
        <th
          className="alignLeft"
          scope="col"
        >
          Recovered
        </th>
        <th
          className=""
          scope="col"
        >
          Deaths
        </th>
        <th
          className="alignLeft"
          scope="col"
        >
          Positive + Negative
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className=""
        >
          4,572
        </td>
        <td
          className=""
        >
          33,318
        </td>
        <td
          className=""
        >
          N/A
        </td>
        <td
          className=""
        >
          N/A
        </td>
        <td
          className=""
        >
          594
        </td>
        <td
          className=""
        >
          N/A
        </td>
        <td
          className=""
        >
          247
        </td>
        <td
          className=""
        >
          N/A
        </td>
        <td
          className=""
        >
          148
        </td>
        <td
          className=""
        >
          N/A
        </td>
        <td
          className=""
        >
          151
        </td>
        <td
          className=""
        >
          37,890
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="detail-text detailText"
  >
    Last updated: Wed Apr 1 2020 12:00 am ET
  </div>
</div>
`;

exports[`Components : Common: Publication: Summary table renders correctly 2`] = `
<div>
  <table
    className="table"
  >
    <colgroup
      span="3"
    />
    <colgroup
      span="2"
    />
    <thead>
      <tr>
        <th
          className=""
          colSpan="3"
          scope="colgroup"
        >
          Tests
        </th>
        <td
          className=""
        >
           
        </td>
      </tr>
      <tr>
        <th
          className=""
          scope="col"
        >
          Positive
        </th>
        <th
          className=""
          scope="col"
        >
          Negative
        </th>
        <th
          className=""
          scope="col"
        >
          Pending
        </th>
        <th
          className=""
          scope="col"
        >
          Deaths
        </th>
        <th
          className=""
          scope="col"
        >
          Positive + Negative
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className=""
        >
          4,572
        </td>
        <td
          className=""
        >
          33,318
        </td>
        <td
          className=""
        >
          N/A
        </td>
        <td
          className=""
        >
          151
        </td>
        <td
          className=""
        >
          37,890
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="detail-text detailText"
  >
    Last updated: Wed Apr 1 2020 12:00 am ET
  </div>
</div>
`;
